@@ -1,0 +1,5 @@
+# set environment variables for docToolchain docker container
+# see https://docs.docker.com/engine/reference/commandline/run/#env
+#
+# example:
+# PROJECT=EXAMPLE_PROJECT
